--- a/index.html
+++ b/index.html
@@ -22,4 +22,4 @@
   </footer>
 </body>
 </html>
-<img src="assets/images/headshots/lani_01.jpg" alt="Description of image" />
+<img src="assets/images/headshots/lani_01.PNG" alt="Description of image" />
