--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Welcome to Hummingbird Essentials</h1>
-    <p>Simple. Natural. Essential.</p>
+   <!-- <p>Simple. Natural. Essential.</p> -->
   </header>
   <main>
     <section>
