--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
       <h2>Our Mission</h2>
       <p>HummingBird Edsentials serves as a one-stop shop for leadership development, professional training, and autism parent coaching—bridging evidence-based learning design, lived experience, and practical advocacy tools to empower leaders, educators, and families to grow with intention and lead with confidence.</p>
     </section>
+
+    <!-- THis line is the photo asset--> 
+<img src="assets/images/headshots/lani_01.PNG" alt="Description of image" />
+    
   </main>
   <footer>
     <p>&copy; 2026 Hummingbird Essentials</p>
   </footer>
 </body>
 </html>
-<img src="assets/images/headshots/lani_01.PNG" alt="Description of image" />
+
