--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
     <!-- THis line is the photo asset--> 
 <img src="assets/images/headshots/lani_01.PNG" alt="Description of image" />
+
+  <!-- this code below centers photo-->
+    <div class="centered-image">
+  <img src="assets/images/headshots/example.jpg" alt="Example" />
+</div>
     
   </main>
   <footer>
