--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <section>
       <h2>Our Mission</h2>
-      <p>HummingBird Edsentials serves as a one-stop shop for leadership development, professional training, and autism parent coaching—bridging evidence-based learning design, lived experience, and practical advocacy tools to empower leaders, educators, and families to grow with intention and lead with confidence.</p>
+      <p>HummingBird Edsentials serves as a one-stop shop for leadership development, professional training, and autism parent coaching bridging evidence-based learning design, lived experience, and practical advocacy tools to empower leaders, educators, and families to grow with intention and lead with confidence.</p>
     </section>
 
     <!-- THis line is the photo asset--> 
