--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Hummingbird Essentials</h1>
+    <h1>Hummingbird Growth Lab</h1>
    <!-- <p>Simple. Natural. Essential.</p> -->
   </header>
   <main>
