--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Hummingbird Growth Lab</h1>
-   <!-- <p>Simple. Natural. Essential.</p> -->
+    <p>Resilient. Intentional. Evolving</p>
   </header>
   <main>
     <section>
