--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- this code below centers photo-->
     <div class="centered-image">
-  <img src="assets/images/headshots/example.jpg" alt="Example" />
+  <img src="assets/images/headshots/lani_01.PNG" alt="Example" />
 </div>
     
   </main>
