--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <p>HummingBird Edsentials serves as a one-stop shop for leadership development, professional training, and autism parent coaching bridging evidence-based learning design, lived experience, and practical advocacy tools to empower leaders, educators, and families to grow with intention and lead with confidence.</p>
     </section>
 
-    <!-- THis line is the photo asset--> 
-<img src="assets/images/headshots/lani_01.PNG" alt="Description of image" />
+    <!-- THis line is the photo asset
+<img src="assets/images/headshots/lani_01.PNG" alt="Description of image" /> -->
 
   <!-- this code below centers photo-->
     <div class="centered-image">
-  <img src="assets/images/headshots/lani_01.PNG" alt="Example" />
+  <img src="assets/images/headshots/lani_02.PNG" alt="Example" />
 </div>
     
   </main>
