--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 <img src="assets/images/headshots/lani_01.PNG" alt="Description of image" /> -->
 
   <!-- this code below centers photo-->
-    <div class="centered-image">
-  <img src="assets/images/headshots/lani_02.PNG" alt="Example" />
-</div>
+    <img src="assets/images/your-image.jpg" class="center-img" alt="Your Alt Text" />
+
     
   </main>
   <footer>
