--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <img src="assets/images/headshots/lani_01.PNG" alt="Description of image" /> -->
 
   <!-- this code below centers photo-->
-    <img src="assets/images/your-image.jpg" class="center-img" alt="Your Alt Text" />
+    <img src="assets/images/headshots/lani_02" class="center-img" alt="Your Alt Text" />
 
     
   </main>
