--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hummingbird Essentials</title>
+  <title>Hummingbird Edsentials</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 
 </head>
@@ -27,7 +27,7 @@
     
   </main>
   <footer>
-    <p>&copy; 2026 Hummingbird Essentials</p>
+    <p>&copy; 2026 Hummingbird Edsentials</p>
   </footer>
 </body>
 </html>
